# routes/api/petsRoutes.js
@@ -5,10 +5,10 @@ const authenticate = require('../../middlewares/authMiddleware');
 
 router.get('/', authenticate, listPets)
 
-router.post('/', authenticate, addPet)
+router.post('/', authenticate, upload.single("img"), addPet)
 
 router.delete('/:id', authenticate, removePet)
 
-router.patch('/avatar/:id', authenticate, upload.single("img"), addPetImg)
+// router.patch('/avatar/:id', authenticate, upload.single("img"), addPetImg)
 
 module.exports = router
